--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-test
+<html>
+
+  <head>
+    <title> Test App Shell </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+
+  <body>
+
+    Does it work?
+
+  </body>
+
+</html>
