--- a/index.html
+++ b/index.html
@@ -3,11 +3,38 @@
   <head>
     <title> Test App Shell </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="inlined.css" media="screen" />
   </head>
 
   <body>
 
-    Does it work?
+    <div class='banner'>
+
+      <img src="assets/image.png" />
+
+    </div>
+
+    <div class='post'>
+
+    </div>
+
+    <div class='post'>
+
+    </div>
+
+    <div class='post'>
+
+    </div>
+
+    <script>
+
+    if('serviceWorker' in navigator) {
+          navigator.serviceWorker
+         .register('/sw.js')
+         .then(function() { console.log('Service Worker Registered'); });
+}
+
+    </script>
 
   </body>
 
